hphp/test/quick/trait_method_modif8.php.expectf

Fatal error: Cannot change non-static method Foo::f() to static in Bar in %s on line 12
